Icons veranderen, scrollen fix, spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1112,7 +1112,7 @@ input[type=submit] {
 }
 
 .footer-top {
-  padding: 120px 0;
+  padding: 100px 0;
 }
 
 @media (max-width: 991px) {
